Update Geral.java