@@ -1,30 +1,44 @@
-
 import java.util.*;
 import java.util.function.*;
 import java.util.stream.*;
 class Main {
     public static void main(String[] args) {
-        Predicate<Integer> ehpar = n -> n % 2 ==0;
-        
-        Predicate<Integer> ehMaiorQue10 = a -> a > 10;
-        if(ehMaiorQue10.test(2)){
-            System.out.println("eh maior que 10!");
-        }else{
-            System.out.println("eh menor que 10!");
-        }
-        
-        List<Integer> numeros = List.of(1,2,3,4,5,6);
-        List<Integer> pares = numeros.stream().filter(n -> n % 2 ==0).collect(Collectors.toList());
-        System.out.println(pares);
-        
-        List<String> nomes = List.of("Ana", "João", "Carlos");
-        nomes.stream().filter(j -> j.startsWith("J")).forEach(System.out::println);
-        
-        List<Integer> numeros2 = List.of(5,1,3,2);
-        List<Integer> ordenado = numeros2.stream().sorted().collect(Collectors.toList());
-        System.out.println(ordenado);
+        List<String> nomes = Arrays.asList("Ana","Pedro","Jo","Carlos");
 
-        //Comparator.comparing(Usuario::getNome)
-     //     .thenComparing(Usuario::getId);
+       Predicate<String> maistresletras = s -> s.length() > 3;
+       
+       List<String> nomestresletras = nomes.stream().filter(maistresletras).collect(Collectors.toList());
+       System.out.println(nomestresletras);
+       
+       List<Integer> nums = Arrays.asList(10, 5, 30, 20);
+       
+       Predicate<Integer> maiorque15 = n -> n > 15;
+       
+       List<Integer> maiores= nums.stream().filter(maiorque15).collect(Collectors.toList());
+       System.out.println(maiores);
+       
+       Function<Integer, Integer> dobro = x -> x*2;
+       
+       List<Integer> listaDobro = nums.stream().map(dobro).collect(Collectors.toList());
+       System.out.println(listaDobro);
+       
+       Function<String, String> maiusculo = s -> s.toUpperCase();
+       
+       List<String> maiusculos = nomes.stream().map(maiusculo).collect(Collectors.toList());
+       System.out.println(maiusculos);
+       
+       Function<String, Integer> tamanhoPalavras = s -> s.length();
+       
+       List<Integer> tamanho = nomes.stream().map(tamanhoPalavras).collect(Collectors.toList());
+       System.out.println(tamanho);
+       
+       List<Integer> numerosOrdenado = nums.stream().sorted().collect(Collectors.toList());
+       System.out.println(numerosOrdenado);
+       
+       List<Integer> numsDes = nums.stream().sorted((a,b) -> b - a).collect(Collectors.toList());
+       System.out.println(numsDes);
+       
+       List<String> ordenarS = nomes.stream().sorted((a,b) -> a.length() - b.length()).collect(Collectors.toList());
+       System.out.println(ordenarS);
     }
 }
